# Pixel_Minds

./: .gitignore  GrocersParadise.cs  README.md  index.html  package-lock.json  package.json  script.js  styles.css
NPCagent_3/: .gitignore  README.md  fastapi_app.py  main.py  pyproject.toml  requirements.txt
NPCagent_3/agents/: team.py
NPCagent_3/core/: config.py  memory.py  tools.py
NPCagent_3/data/: world_state.json
NPCagent_3/data/environment/: EnvironmentData.cs  GrocersParadise.cs  egyptian_tomb.cs  space_station_bay.cs  supermarket_environment.cs  tavern_environment.json
NPCagent_3/memory/: chroma.sqlite3
NPCagent_3/prompts/: code_analyzer_system_message.txt  npc_system_message.txt  story_system_message.txt  vision_agent_system_message.txt
NPCagent_3/public/: chat.html  chat.js  form.html  form.js  home.html  index.html  load.html  load.js  main.js  style.css
NPCagent_3/state/: faheem_state.json  rougebot7_state.json
NPCagent_3/utils/: helpers.py
