[project]
name = "npcagent-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "asyncio>=4.0.0",
    "autogen-agentchat>=0.7.4",
    "autogen-core>=0.7.4",
    "autogen-ext[docker]>=0.7.4",
    "chromadb>=1.0.20",
    "docker>=7.1.0",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "ipykernel>=6.30.1",
    "openai>=1.104.2",
    "pydantic>=2.11.7",
    "pypdf>=6.0.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.49.1",
    "tiktoken>=0.11.0",
    "uvicorn>=0.35.0",
]
